log
Thu 25 Apr 2024 09:20:14 PM UTC: 
 hashmap.c | 113 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 104 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:3: error: ‘else’ without a previous ‘if’
   77 |   else
      |   ^~~~
Compilation failed
e92871f
Thu 25 Apr 2024 09:21:44 PM UTC: 
 hashmap.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
 tests:  2|5
total_score: 20/70
64b50d0
Thu 25 Apr 2024 09:30:46 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
eb25d5e
Thu 25 Apr 2024 09:30:57 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
683e88e
Thu 25 Apr 2024 09:37:28 PM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
6217c3d
Thu 25 Apr 2024 09:38:15 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 40/70
b60eb61
Thu 25 Apr 2024 09:38:50 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
5a831bb
Thu 25 Apr 2024 09:54:45 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
5fcd5d6
Thu 25 Apr 2024 09:56:56 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|3
total_score: 40/70
793805e
